--- a/frontend/src/styles/signin.module.scss
+++ b/frontend/src/styles/signin.module.scss
@@ -1,3 +1,10 @@
+.login_dark{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+}
 .login_dark form {
   max-width: 500px;
   width: 100%;
