--- a/frontend/src/styles/signin.module.scss
+++ b/frontend/src/styles/signin.module.scss
@@ -1,38 +1,34 @@
 .login_dark{
-  position: relative;
-  top: 50%;
-  left: 50%;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 100%;
+  left: 68%;
   transform: translate(-50%, -50%);
-  padding: 50px;
+  width: 450px;
+  position: fixed;
 }
 .login_dark form {
-  max-width: 500px;
   width: 100%;
-  background-image: url("../../public/img/login_background.jpeg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
   border-radius: 4px;
-  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
-  position: absolute;
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2); 
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 50px;
+  background: #8ee5ff
 }
 
 .login_dark form .form_control {
   background: none;
   border: none;
-  border-bottom: 1px solid #434a52;
+  border-bottom: 1px solid #000000;
   border-radius: 0;
-  font: inherit;
   width: 100%;
   display: block;
   margin: 20px 0;
   padding-bottom: 5px;
-  font-weight: bolder;
+  font-weight: bolder;  
 }
 
 .login_dark form .btn_primary {
@@ -52,7 +48,7 @@
 
 .login_dark form .btn_primary:hover,
 .login_dark form .btn_primary:active {
-  background: #214a80;
+  background: #000000;
   outline: none;
 }
 
@@ -60,9 +56,10 @@
   display: block;
   text-align: center;
   font-size: 15px;
-  color: #6f7a85;
+  color: #000000;
   opacity: 0.9;
   text-decoration: none;
+  font-weight: bolder;
 }
 
 .login_dark form .new_account:hover,
@@ -77,7 +74,7 @@
 
 .sr_only {
   text-align: center;
-  color: #6f7a85;
+  color: #000000;
   opacity: 0.9;
   text-decoration: none;
   font-weight: bolder;
@@ -85,9 +82,9 @@
 }
 
 .password_requirement {
-  border: 2px solid #6f7a85;
+  border: 2px solid #000000;
   display: block;
-  color: #6f7a85;
+  color: #000000;
   padding: 10px;
 }
 
