--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html,body{
+    background-image: url('../../public/img/wiki_background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
