--- a/frontend/src/styles/index.module.scss
+++ b/frontend/src/styles/index.module.scss
@@ -1,9 +1,16 @@
-.main_style{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 60%;
-    left: 57.5%;
-    transform: translate(-50%, -50%);
-    max-width: 1500px;
-  }
+.main_style {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 60%;
+  left: 57.5%;
+  transform: translate(-50%, -50%);
+  max-width: 1500px;
+}
+
+.main_title {
+  font-size: 100px;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+}
