--- a/frontend/src/styles/signin.module.scss
+++ b/frontend/src/styles/signin.module.scss
@@ -1,11 +1,12 @@
 .login_dark{
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 100vh;
-  top: 100%;
-  left: 68%;
-  transform: translate(-50%, -50%);
-  width: 450px;
+  height: 100%;
+  left: 55%;
+  max-width: 500px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 .login_dark form {
   width: 100%;
