--- a/frontend/src/styles/signup.module.scss
+++ b/frontend/src/styles/signup.module.scss
@@ -1,14 +1,13 @@
 .register{
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 100vh;
-  top: 100%;
-  left: 68%;
-  transform: translate(-50%, -50%);
-  width: 450px;
-  position: fixed;
+  top: 13cm;
+  left: 55%;
+  max-width: 500px;
+  justify-content: center;
+  align-items: center;
 }
-.register form {
+.register form {  
   width: 100%;
   border-radius: 4px;
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2); 
